--- a/contact.html
+++ b/contact.html
@@ -2,39 +2,30 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto | Locompro</title>
-  <link rel="stylesheet" href="stylesm.css">
-  <link rel="stylesheet" href="styles.css"> 
+  <title>Página de inicio</title>
+
+<link rel="stylesheet" href="stylesm.css">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
-
 <body>
-  <header>
-    <h1>Contáctanos</h1>
-    <p>Nos encantaría saber de ti. Déjanos tu mensaje y te responderemos lo antes posible.</p>
 
-  <header>
-    <div class="logo"> <!-- Contenedor del logo y nombre de la marca -->
-      
-      <h1>Locompro</h1> <!-- Nombre de la marca -->
-    </div>
-    <nav> <!-- Menú de navegación principal -->
-      <ul>
-        <li><a href="index.html">Inicio</a></li> <!-- Enlace a la página de inicio -->
-        <li><a href="about.html">Quiénes somos</a></li> <!-- Enlace a la página actual -->
-        <li><a href="contact.html">Contacto</a></li> <!-- Enlace a la página de contacto -->
+<div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg
+          class="bi me-2" width="40" height="32" aria-hidden="true">
+          <use xlink:href="#bootstrap"></use>
+        </svg> <span class="fs-4" style="font-weight: bold;">¡Lo Compro!</span> </a>
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/" class="nav-link active" aria-current="page" style="background-color: #ff7f50; color: black;">Inicio</a></li>
+        <li class="nav-item"><a href="about.html" class="nav-link" style="color: #c83500;">Quiénes Somos</a></li>
+        <li class="nav-item"><a href="contact.html" class="nav-link" style="color: #c83500;">Contacto</a></li>
+        <li class="nav-item"><a href="faqs.html" class="nav-link" style="color: #c83500;">FAQs</a></li>
       </ul>
-    </nav>
-  </header>
+    </header>
+  </div>
 
 
-
-
-
-
-
-    
-  </header>
 
   <main>
     <form action="#" method="post">
