--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
   <title>Página de inicio</title>
   <link rel="stylesheet" href="stylen.css">
   <link rel="stylesheet" href="estilosos.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
 
-<nav class="navbar">
+<div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg
+          class="bi me-2" width="40" height="32" aria-hidden="true">
+          <use xlink:href="#bootstrap"></use>
+        </svg> <span class="fs-4" style="font-weight: bold;">¡Lo Compro!</span> </a>
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/" class="nav-link active" aria-current="page" style="background-color: #ff7f50; color: black;">Inicio</a></li>
+        <li class="nav-item"><a href="about.html" class="nav-link" style="color: #c83500;">Quiénes Somos</a></li>
+        <li class="nav-item"><a href="contact.html" class="nav-link" style="color: #c83500;">Contacto</a></li>
+        <li class="nav-item"><a href="faqs.html" class="nav-link" style="color: #c83500;">FAQs</a></li>
+      </ul>
+    </header>
+  </div>
 
-  <ul>
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="contact.html">Contacto</a></li>
-    <li><a href="about.html">Nosotros</a></li>
-  </ul>
-</nav>
+
+
 
     <div class="center">
       <main>
@@ -66,11 +76,22 @@
 
 
 <footer class="footer">
-  <p>&copy; Nicolas Mendieta, Juan Felipe Gonzales, Margareth Villanueva, Alberto Cortes  </p>
-  <p>
-    <a>locompro@gmail.com</a> |
-    <a>Locompro</a>
+<div class="card">
+  <div class="card-header">
+    Locompro
+  </div>
+  <div class="card-body">
+    <figure>
+      <blockquote class="blockquote">
+        <p>Nicolas Mendieta, Juan Felipe Gonzales, Margareth Villanueva, Alberto Cortes  
   </p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        Correo <cite title="Source Title">Locompro@gmail.com</cite>
+      </figcaption>
+    </figure>
+  </div>
+</div>
 </footer>
 
   
@@ -78,3 +99,9 @@
 
 </body>
 </html>
+
+
+
+
+
+
